# blob

./: .gitignore  Cargo.toml  LICENSE  README.md  load.py  multiple.py  plot.py  proc.py  sweep.py
.cargo/: config.toml
experiments/: load.py  plot.py  store.py
experiments/brain-adult_body-adult/: load.py  plot.py
experiments/brain-adult_body-growing/: load.py
experiments/brain-growing_body-adult/: plot.py
src/: brain.rs  grid.rs  main.rs  physics.rs  ui.rs  vector.rs  worm.rs
