[package]
name = "blob"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { version = "0.9.0", features = ["dynamic"] }
bevy = { version = "0.9.0" }
bevy-inspector-egui = "0.14.0"
bevy_pancam = "0.7.0"
bevy_prototype_debug_lines = "0.9.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
